fix: reset z-index for detect event

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -438,7 +438,7 @@
     position: absolute;
     font-family: Verdana;
     margin: 0;
-    z-index: 1001;
+    z-index: 500;
     .tui-chart-chartExportMenu-button {
       position: absolute;
       width: 24px;
@@ -628,7 +628,7 @@
 
   .tui-chart-tooltip-area {
     position: absolute;
-    z-index: 1010;
+    z-index: 501;
     * {
       .user-select();
     }
